# skate-project

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  alembic.ini  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py
app/api/: router.py  routes.py
app/api/dependencies/: __init__.py
app/api/routes/: __init__.py  debug.py  user.py
app/api/v1/: router.py
app/core/: __init__.py  auth.py  auth_utils.py  config.py
app/core/config/: __init__.py  base.py  development.py  production.py  testing.py
app/core/exceptions/: __init__.py  base.py  handlers.py
app/core/middleware/: __init__.py  cors.py  logging.py
app/dependencies/: auth.py  permissions.py
app/domain/: __init__.py
app/domain/parks/: README.md  __init__.py
app/domain/parks/api/: __init__.py  feature_router.py  park_router.py  router.py
app/domain/parks/models/: __init__.py  park.py
app/domain/parks/repositories/: __init__.py  park_repository.py
app/domain/users/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: __init__.py  redis.py
app/infrastructure/database/: __init__.py  base.py  session.py  unit_of_work.py
app/infrastructure/security/: __init__.py  auth.py  jwt.py  password.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth.py  auth_utils.py  db.py  jwt_utils.py  permissions.py  user.py
migrations/: env.py
migrations/versions/: 2025_04_03_2020-e9eda759f0f5_initial_migration.py
scripts/: debug_issues.py  production_data.py
tests/: conftest.py  test_auth.py  test_db.py  test_endpoints.py  test_permissions.py  test_user.py
tests/factories/: user_factory.py
tests/integration/api/: test_user_routes.py
tests/utils/: __init__.py  auth_helpers.py  db_helpers.py  mock_helpers.py
(+19 files in other folders)
