[tool.poetry]
name = "skate-project"
version = "0.1.0"
description = "A FastAPI project"
authors = ["Chris Tomlin"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
bcrypt = "^4.2.0"
sqlalchemy = "^2.0.36"
redis = "^5.2.0"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
authlib = "^1.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
alembic = "^1.13.3"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_level = "INFO"
